@@ -5013,5 +5013,9 @@ PACKAGE: 2.2.99.2
     repository.
 
 2006-11-06 tdb
- * Modified get_input and get_input_hidden to remove return as well - #2581
- * Added ownerDocument to XML::DOM compatibility
+ * Modified get_input and get_input_hidden to remove return as well
+ * Added ownerDocument to XML::DOM
+
+2006-11-06 cjg
+ * Reworked parser in Import::DefaultXML to be more SAXY.
+
